--- a/src/components/ui/blocks/list/List.module.scss
+++ b/src/components/ui/blocks/list/List.module.scss
@@ -19,10 +19,10 @@
 			color: $AccentBlue;
 		}
 	}
-}
 
-.nested-list {
-	padding-top: $ui-outer-padding;
+	.nested {
+		padding-top: $ui-outer-padding;
+	}
 }
 
 // ol-list-level
@@ -61,21 +61,4 @@ ol {
 			}
 		}
 	}
-}
-
-// font-level
-
-.level-1 {
-	font-size: clamp($ui-step * 5, 4.4vmin, $ui-step * 6);
-	line-height: 1.333334em;
-}
-
-.level-2 {
-	font-size: clamp(17px, 3.6vmin, $ui-step * 5);
-	line-height: 1.4em;
-}
-
-.level-3 {
-	font-size: clamp(15px, 3.2vmin, 17px);
-	line-height: 1.4118em;
 }
