--- a/src/components/ui/typography/heading/Heading.module.scss
+++ b/src/components/ui/typography/heading/Heading.module.scss
@@ -25,11 +25,11 @@
 // mode
 
 .wideLevel-1 {
-	font-family: $MTSUltraExpanded;
+	font-family: $MTSUltraExtended;
 }
 
 .wideLevel-2 {
-	font-family: $MTSExpanded;
+	font-family: $MTSExtended;
 }
 
 .wideLevel-3 {
