--- a/src/views/experience/experience-item/ExperienceItem.module.scss
+++ b/src/views/experience/experience-item/ExperienceItem.module.scss
@@ -53,13 +53,9 @@
 
 	border-radius: inherit;
 
-	@media (min-width: $ui-max-w--tablet) {
+	@media (min-width: $ui-breakpoint--md) {
 		&:hover {
 			cursor: none;
 		}
 	}
-
-	// &:hover ~ .content .info {
-	// 	color: var(--text-secondary);
-	// }
 }
