--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,8 @@
 @import 'Common', 'Fonts', 'Reset', 'Theme';
 
-
-
 :root {
 	font-family:
-		$ui-font-secondary,
+		$ui-font--secondary,
 		BlinkMacSystemFont,
 		Roboto,
 		-apple-system,
