--- a/src/components/layout/footer/Footer.module.scss
+++ b/src/components/layout/footer/Footer.module.scss
@@ -7,6 +7,8 @@
 	margin-left: $ui-outer-margin;
 	margin-right: $ui-outer-margin;
 	padding: clamp($ui-step * 4, 2.72vmax, $ui-step * 12) 0 $ui-step * 12;
+
+	z-index: 2;
 }
 
 .wrapper {
