--- a/src/styles/_Variables.scss
+++ b/src/styles/_Variables.scss
@@ -45,6 +45,8 @@ $ui-index--24: 24; // for emergencies
 
 // Container ———————————————————————————————————————————————— //
 
+$ui-breakpoint--2xsm: 375px;
+$ui-breakpoint--xsm: 425px;
 $ui-breakpoint--sm: 640px;
 $ui-breakpoint--md: 768px;
 $ui-breakpoint--l: 1024px;
