--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -42,8 +42,7 @@
 
 html {
 	box-sizing: border-box;
-	overflow-x: hidden;
-	-webkit-font-smoothing: antialiased;
+	// overflow-x: hidden;
 }
 
 body {
